# kernel

./: Cargo.toml
src/: asm_executor.rs  async_tasks.rs  cmd_executor.rs  debug_pipeline.rs  executor.rs  format.rs  framebuffer.rs  framebuffer_ext.rs  main.rs  memory.rs  task.rs  terminal.rs  terminal_logger.rs  terminal_v2.rs  test_env.rs
src/alloc/: simple.rs
src/allocators/: mod.rs  simple.rs
src/app/: mod.rs  navigation.rs
src/apps/: editor_app.rs  logs_app.rs  mod.rs  terminal_app.rs
src/core/: mod.rs
src/core/interrupts/: gdt.rs  interrupts.rs  mod.rs  pic.rs  timer.rs
src/core/kernel/: init.rs  mod.rs  status.rs
src/data_structures/: mod.rs  vec.rs
src/devices/: mod.rs  mouse_cursor.rs
src/devices/drivers/: mod.rs  ps2_keyboard.rs  ps2_mouse.rs  ps2_mouse_new.rs
src/devices/framebuffer/: color.rs  framebuffer.rs  mod.rs  os_term.rs  shape.rs
src/devices/input/: events.rs  mod.rs
src/drivers/: ps2_keyboard.rs  ps2_mouse.rs
src/framebuffer/: framebuffer.rs  framebuffer_ext.rs  mod.rs
src/input/: events.rs  mod.rs
src/interrupts/: gdt.rs  interrupts.rs  mod.rs  pic.rs
src/kcore/interrupts/: gdt.rs  interrupts.rs  mod.rs  pic.rs
src/kcore/kernel/: init.rs  mod.rs  status.rs
src/kernel/: init.rs
src/memory/: brk.rs  debug.rs  mmap.rs  mod.rs  munmap.rs
src/syscalls/: dispatcher.rs  mod.rs  numbers.rs
src/tests/: asm.rs  mod.rs  test_env.rs
src/ui/: mod.rs  theme.rs  widgets.rs
src/ui_provider/: color.rs  mod.rs  render.rs  shape.rs  theme.rs
src/vm/: bytecode.rs  mod.rs  parser.rs  runtime.rs  vm_process.rs
(+14 files in other folders)
