[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
uart_16550 = "0.2"
spin = "0.9"
rlibc = "1.0"
font8x8 = { version = "0.3.1", default-features = false }
# compiler_builtins = { version = "0.1.160", features = ["mem"] }

[profile.release]
panic = "abort"

[[bin]]
name = "kernel"
test = false
bench = false
