[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = {version = "0.11"}
uart_16550 = "0.2"
spin = "0.9"
rlibc = "1.0"
x86_64 = "0.15.2"
pic8259 = "0.11.0"
embedded-graphics = { version = "0.8.1" }
embedded-graphics-core = { version = "0.4.0" }
libm = "0.2.15"
[profile.release]
panic = "abort"

[[bin]]
name = "kernel"
test = false
bench = false
